--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
-# REACT_APP_API_URL=http://localhost:5000/api
+#REACT_APP_API_URL=http://localhost:5000/api
 
-REACT_APP_API_URL=https://instagram-clone-backend.azurewebsites.net/api
+# REACT_APP_API_URL=https://instagram-clone-backend.azurewebsites.net/api
+
+REACT_APP_API_URL=https://bakar-a1_asp_2019.azurewebsites.net/api
