--- a/.env
+++ b/.env
@@ -2,4 +2,5 @@
 
 # REACT_APP_API_URL=https://instagram-clone-backend.azurewebsites.net/api
 
-REACT_APP_API_URL=https://bakar-a1_asp_2019.azurewebsites.net/api
+REACT_APP_API_URL=https://tiktokbackend.azurewebsites.net/api
+
